# green-blue-task

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: dev.workflow.yml  prod.workflow.yml
backend/: .dockerignore  .flake8  Dockerfile  alembic.ini  pyproject.toml  pytest.ini
backend/app/: config.py  conftest.py  database.py  logger.py  main.py
backend/app/api/dependencies/: auth.py
backend/app/api/routers/: auth.py  products.py
backend/app/crud/: auth.py  products.py
backend/app/models/: __init__.py  products.py
backend/app/schemas/: product.py  user.py
backend/app/utils/: auth.py  custom_exceptions.py  helpers.py  http_client.py
backend/app/utils/enums/: products.py
backend/migrations/: env.py
backend/migrations/versions/: 4e06c6b767af_init_tables.py
backend/scripts/: autogenerate_migrations.sh  install
backend/tests/: conftest.py  test_products.py
